# open-kinematics

./: .codespell-british.txt  .gitignore  CHANGELOG.md  LICENSE  PROVENANCE.md  README.md  geometry.yaml  hello.py  justfile  notes.md  point_positions.txt  point_positions_old.txt  pyproject.toml  repomix-output.xml  test.py  visualize_camber_shim.py
.claude/: settings.local.json
.github/workflows/: ci.yml
scripts/: bump_sweep.yaml  plot_bump_sweep.py
src/kinematics/: __init__.py  analysis.py  api.py  cli.py  configs.py  constants.py  constraints.py  core.py  derived_points.py  diagnostics.py  enums.py  jacobians.py  linalg.py  loader.py  main.py  math.py  parquet_writer.py  primitives.py  rigid_body.py  sensitivity.py  solver.py  state.py  suspensions.py  sweep_io.py  targets.py  types.py  upright.py
src/kinematics/cli/: app.py
src/kinematics/components/: upright.py
src/kinematics/constraints/: __init__.py  ops.py  types.py  utils.py
src/kinematics/core/: __init__.py  analysis.py  assembly.py  constants.py  dual.py  elements.py  enums.py  export.py  models.py  positions.py  presentation.py  rigid_body.py  soft_math.py  sweep.py  types.py
src/kinematics/geometry/: base.py  constants.py  exceptions.py  loader.py  schemas.py  utils.py  validate.py
src/kinematics/io/: geometry_loader.py  results_writer.py  sweep_loader.py  validation.py
src/kinematics/metrics/: __init__.py  angles.py  antis.py  catalog.py  context.py  helpers.py  main.py  rates.py  steering_geometry.py  swing_arms.py
src/kinematics/points/: __init__.py  collections.py  derived.py  ids.py  main.py  manager.py  ops.py  utils.py
src/kinematics/schema/: __init__.py  config.py  geometry.py  sweep.py
src/kinematics/solver/: core.py  derived_points.py  manager.py
src/kinematics/solvers/: common.py  constraints.py  core.py  double_wishbone.py  targets.py
src/kinematics/solvers_new/: core.py
src/kinematics/suspension/: double_wishbone.py
src/tests/: test_constraints.py  test_derived.py  test_linalg.py  test_loader.py  test_math.py  test_public_api.py  test_solver.py  test_targets.py
src/visualization/: debug.py  main.py
src/visualization_new/: debug.py
tests/: conftest.py  test_absolute_mode.py  test_analysis.py  test_axle.py  test_axle_composition.py  test_axle_rocker.py  test_axle_schema.py  test_camber_shims.py  test_constraints.py  test_derived.py  test_diagnostics.py  test_dual.py  test_jacobians.py  test_loader.py  test_metrics.py  test_mount_body.py  test_presentation.py  test_public_api.py  test_rate_declarations.py  test_rocker_arb.py  test_scripts_smoke.py  test_sensitivity.py  test_soft_math.py  test_solver.py  test_state.py  test_state_metrics.py  test_strut.py  test_suspensions.py  test_targets.py  test_templates.py  test_upright_rigid_body.py
tests/core/: test_assembly.py
tests/data/: axle_geometry_rocker.yaml  axle_rocker_sweep.yaml  corner_rocker_geometry.yaml  corner_strut_geometry.yaml  corner_strut_rocker_geometry.yaml  geometry.yaml  geometry_template.yaml  sweep.yaml
tests/debug/: test_run_with_viz.py
tests/e2e/: test_e2e.py
tests/integration/: test_run_with_viz.py
tests/manual/: test_run_with_viz.py
tests/points/: test_derived.py
tests/suspensions/: test_run.py
tests/types/: test_state.py
tests/vector_utils/: test_generic.py  test_geometric.py  test_vector_utils_geometric.py
tools/: generate_jacobians.py  plot_residuals.py
(+113 files in other folders)
