[project]
name = "kinematics"
version = "0.1.0"
description = "Kinematics solver for suspension systems."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marshmallow-dataclass>=8.7.1",
    "numpy>=2.2.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "scipy>=1.14.1",
    "typer>=0.19.2",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]
cli = ["typer>=0.12"]

[dependency-groups]
dev = [
    "docformatter>=1.7.7",
    "pytest>=8.3.4",
    "ruff>=0.13.3",
    "ty>=0.0.1a21",
]

[tool.docformatter]
recursive = true
wrap-summaries = 88
wrap-descriptions = 88
pre-summary-newline = true
close-quotes-on-newline = true
blank = false
make-summary-multi-line = true


# [tool.uv.workspace]
# members = ["src/kinematics"]

# [tool.hatchling.build.targets.wheel]
# packages = ["src/kinematics"]
