[project]
name = "kinematics"
version = "0.1.0"
description = "Kinematics solver for suspension systems."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marshmallow-dataclass>=8.7.1",
    "numpy>=2.2.0",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "scipy>=1.14.1",
    "typer>=0.19.2",
]

[project.scripts]
kinematics = "kinematics.cli:app"

[tool.uv]
package = true

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]
cli = ["typer>=0.12"]

[dependency-groups]
dev = [
    "docformatter>=1.7.7",
    "pytest>=8.3.4",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
    "ty>=0.0.1a21",
]

# Documentation formatter settings.
# --------------------------------------------------------------------------------------
[tool.docformatter]
recursive = true
wrap-summaries = 88
wrap-descriptions = 88
pre-summary-newline = true
close-quotes-on-newline = true
blank = false
make-summary-multi-line = true

# Test coverage settings.
# --------------------------------------------------------------------------------------
[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kinematics"]
